@@ -1,0 +1,1 @@
+:set window filetype picolisp<ret>2f';i#<esc>
