@@ -7,6 +7,7 @@ https://github.com/eraserhd/parinfer-rust/compare/v0.5.0...HEAD[Unreleased]
 === Added
 
 * Added support for https://hylang.org/[Hy].
+* Added support for https://picolisp.com/wiki/?home[PicoLisp].
 
 https://github.com/eraserhd/parinfer-rust/compare/v0.4.3...HEAD[v0.5.0]
 -----------------------------------------------------------------------
